Bug 1607202 - Remove unused GCRuntime::chunkAllocationSinceLastGC field r=allstarschh

Differential Revision: https://phabricator.services.mozilla.com/D58788